--- a/ngapp/src/app/student/story-drawer/story-drawer.component.html
+++ b/ngapp/src/app/student/story-drawer/story-drawer.component.html
@@ -18,20 +18,25 @@
     <div *ngFor="let story of stories | appFilter : searchText; let i = index" (click)="setStory(story)" >
       <!-- story entry-->
       <div class="contentSection" [attr.id]="story._id">
-        <!-- story title-->
-        <div class="contentsTitle" [attr.id]="i" (blur)="saveStoryTitle(i, story)" (keydown.enter)="saveStoryTitle(i, story)">
-          {{ story?.title }}
+        <!-- title/feedback notification container-->
+        <div style="display: flex">
+          <!-- story title-->
+          <div class="contentsTitle" [attr.id]="i" (blur)="saveStoryTitle(i, story)" (keydown.enter)="saveStoryTitle(i, story)" >
+            {{ story?.title }}
+          </div>
+          <!-- feedback notification -->
+          <div class="notificationBtn" *ngIf="hasUnreadFeedback(story)">1</div>
         </div>
         <!-- date and menu icon-->
         <div class="contentsDate">
           {{ story.lastUpdated | date : "d/M/yy" }}
-          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Options to delete or rename your story">
+          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Options to delete or rename your story" >
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
             <button mat-menu-item (click)="openDeleteStoryDialog(story._id)">
               <mat-icon>delete</mat-icon>
-              <span>{{ts.l.delete}}</span>
+              <span>{{ ts.l.delete }}</span>
             </button>
             <button mat-menu-item (click)="makeTitleDivEditable(i)">
               <mat-icon>create</mat-icon>
