--- a/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.html
+++ b/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.html
@@ -1,21 +1,1 @@
-<!--Lists all of the teacher's classrooms -->
-<div class="contents">
-  <div class="classContainer">
-    <!-- header plus add classroom button -->
-    <div class="classHeader">
-      {{ts.l.classrooms}} <div class="addClassBtn" (click)="openCreateClassroomDialog()"><i class="fas fa-plus"></i></div>
-    </div>
-    <!-- title and number of students headers -->
-    <div class="classroomKey">
-      <div>{{ts.l.title}}</div>
-      <div class="keyNumStudents">{{ts.l.no_students}}</div>
-    </div>
-    <!-- display list of classrooms-->
-    <div class="classBody">
-      <div class="classroomCard" *ngFor="let classroom of classrooms" (click)="goToClassroom(classroom._id)">
-        <div>{{classroom.title}}</div>
-        <div class="numStudents">{{classroom.studentIds.length}}</div>
-      </div>
-    </div>
-  </div>
-</div>
+<p>teacher-dashboard works!</p>
