--- a/ngapp/src/app/teacher/classroom-drawer/classroom-drawer.component.html
+++ b/ngapp/src/app/teacher/classroom-drawer/classroom-drawer.component.html
@@ -24,7 +24,7 @@
           </div>
           <!-- date and menu icon-->
           <div class="contentsDate">
-            {{ classroom?.date | date : "d/M/yy" }}
+            {{ classroom?.studentIds.length }}
             <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Options to delete or rename your classroom">
               <mat-icon>more_vert</mat-icon>
             </button>
