pass integration tests

--- a/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
+++ b/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
@@ -77,7 +77,7 @@
       <div>
         <button class="languageBtn" (click)="setLanguageButton('ga')" id="ga"> GA </button>
         /
-        <button class="languageBtn" (click)="setLanguageButton('en')" id="en"> EN </button>
+        <button class="languageBtn" (click)="setLanguageButton('en')" id="en" data-cy="switch-to-english"> EN </button>
       </div>
 
       <!-- sign in button -->
