--- a/ngapp/src/app/register/form.component.html
+++ b/ngapp/src/app/register/form.component.html
@@ -75,5 +75,5 @@
       </div>
     </div>
   </div>
-  <button type="submit" class="btn loginBtn">{{ ts.l.register }}</button>
+  <button type="submit" class="btn loginBtn" data-cy="register">{{ ts.l.register }}</button>
 </form>
