--- a/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.scss
+++ b/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.scss
@@ -129,6 +129,7 @@
     float:left;
     padding-left: 10px;
     padding-top: 7px;
+    padding-right: 10px;
     transform: scale(1.5);
     z-index: 100;
 }
