--- a/ngapp/src/app/teacher/teacher-story/teacher-story.component.html
+++ b/ngapp/src/app/teacher/teacher-story/teacher-story.component.html
@@ -4,9 +4,12 @@
     <div class="classContainer">
       <!-- header story title and back arrow -->
       <div class="classHeader">
-        <div class="backArrow" (click)="goBack()"><i class="fas fa-arrow-left"></i></div>
-          {{story?.title}} 
-          <div *ngIf="story?.createdWithPrompts" class="madeWithPrompts">{{ts.l.made_using_prompts}}</div>
+        <div>
+          {{story?.title}} <span *ngIf="story?.createdWithPrompts" class="madeWithPrompts">{{ts.l.made_using_prompts}}</span>
+        </div>
+          <div class="closeFeedbackBtn" (click)="closeFeedbackEmitter.next(true)">
+            <i class="fa fa-times"></i>
+          </div>
       </div>
       <!-- story body and feedback details -->
       <div class="storyClassBody">
@@ -28,8 +31,7 @@
                 <div class="userInfoContainer">
                   <div class="userInfo">{{ts.l.title}} <textarea readonly class="userInfoTextarea">{{story?.title}}</textarea></div>
                   <div class="userInfo">{{ts.l.story_author}} <textarea readonly class="userInfoTextarea">{{story?.author}}</textarea></div>
-                  <div class="userInfo" *ngIf="isFromAmerica">{{ts.l.creation_date}} <textarea readonly class="userInfoTextarea">{{story?.date | date: 'MM/dd/yyyy, hh:mm aa'}}</textarea></div>
-                  <div class="userInfo" *ngIf="!isFromAmerica">{{ts.l.creation_date}} <textarea readonly class="userInfoTextarea">{{story?.date | date: 'dd/MM/yyyy, hh:mm aa'}}</textarea></div>
+                  <div class="userInfo">{{ts.l.creation_date}} <textarea readonly class="userInfoTextarea">{{story?.date | date: 'dd/MM/yyyy, hh:mm aa'}}</textarea></div>
                   <div class="userInfo">{{ts.l.dialect}} <textarea readonly class="userInfoTextarea">{{story?.dialect}}</textarea></div>
                 </div>
                 <!-- feedback container -->
