--- a/ngapp/src/app/teacher/teacher-story/teacher-story.component.scss
+++ b/ngapp/src/app/teacher/teacher-story/teacher-story.component.scss
@@ -9,6 +9,15 @@
     flex-direction: column;
 }
 
+.classHeader {
+    justify-content: space-between;
+    padding-right: 10px;
+}
+
+.closeFeedbackBtn:hover {
+    cursor: pointer;
+}
+
 .madeWithPrompts {
     color: rgba(255, 255, 255, 0.4);
     padding-left:5px
