--- a/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.html
+++ b/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.html
@@ -1,6 +1,6 @@
 <!-- HEADER -->
 <div class="storyTitleHeader" *ngIf="classroom">
-  <!-- STORY TITLE -->
+  <!-- CLASSROOM TITLE -->
   <div class="storyTitleContainer">
     <input
       class="storyTitle"
@@ -86,16 +86,12 @@
 
   <!-- CENTER CONTAINER-->
   <div class="storyContainer">
-    <div class="ql-container" #quillHeightSpan [ngStyle]="quillEditorStyle" *ngIf="classroom; else newClassroomMessage" >
-      <div style="height: 80vh; width: 100%">
-        <app-student-list
+    <div class="studentListContainer" *ngIf="classroom; else newClassroomMessage" >
+      <app-student-list
         [classroom]="classroom"
         (storyEmitter)="storyForFeedback = $event; rightDrawer.open()"
-        ></app-student-list>
-      </div>
-
+      ></app-student-list>
     </div>
-
     <!-- NO CLASSROOMS MESSAGE-->
     <ng-template #newClassroomMessage>
       <div *ngIf="!classroomsLoaded">
@@ -107,10 +103,11 @@
     </ng-template>
   </div>
 
-  <mat-drawer #rightDrawer class="rightDrawer" mode="over" position="end" style="width: 80%">
+  <!-- STORY FEEDBACK DRAWER -->
+  <mat-drawer #rightDrawer class="rightDrawer" mode="over" position="end" style="width: 80%" >
     <app-teacher-story
-    [story]="storyForFeedback"
-    (closeFeedbackEmitter)="rightDrawer.close()"
+      [story]="storyForFeedback"
+      (closeFeedbackEmitter)="rightDrawer.close()"
     ></app-teacher-story>
   </mat-drawer>
 </mat-drawer-container>
