--- a/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.scss
+++ b/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.scss
@@ -23,19 +23,6 @@
     border-radius: 5px;
 }
 
-.saveIcon {
-    align-self: flex-end;
-    white-space: nowrap;
-    color: var(--dark-text);
-    border-style: none;
-    font-size: 11pt;
-    padding: 5px;
-}
-
-.savedIcon {
-    color: var(--scealai-light-brown);
-}
-
 .optionsBtnContainer > * {
     height: 2rem;
 }
@@ -82,18 +69,6 @@
     border-radius: 2;
 }
 
-.notRecordingBtn {
-    background-color: red;
-    color: white;
-    border-radius: 4px;
-    border: none;
-    margin-left: 4px;
-    font-size: 10pt;
-    padding: 4px;
-    padding-left: 8px;
-    padding-right: 8px;
-}
-
 .bodyContainer {
     width: 100%;
     height: 100%;
@@ -109,20 +84,9 @@
     height: 100%;
 }
 
-.ql-container {
-    background-color: #F8F9FA;
-    height: 100%;
-}
-
-//<link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet"
-.ql-editor {
-    background-color: white;
-    z-index: 1;
-    margin-top: 20px;
-    font-size: 14pt;
-    font-family: "Times New Roman", Times, serif;
-    min-height: 70vh !important;        // current way to set the height, would like to make it dynamic
-    max-height: 70vh !important;
+.studentListContainer {
+    height: 80vh; 
+    width: 100%;
 }
 
 .menuButton {
@@ -153,25 +117,4 @@
     padding-bottom: 50px;
     height: 80vh;
     width: 100%;
-}
-
-.rightDrawer {
-    width: 25%;
-    height: 100%;
-}
-  
-.blink {
-    animation: blinker 2s linear infinite;
-}
-  
-@keyframes blinker {
-    0% {
-        background-color:red;
-    }
-    50% {
-        background-color:rgb(119, 0, 0);
-    }
-    100% {
-        background-color:red;
-    }
 }
