--- a/ngapp/src/app/teacher/student-list/student-list.component.scss
+++ b/ngapp/src/app/teacher/student-list/student-list.component.scss
@@ -21,3 +21,9 @@
     text-align: center;
     padding-top: 100px;
 }
+
+.clickedresultCard {
+    background-color: #eee;
+    font-weight: bolder;
+    border-radius: 10px;
+}
