--- a/ngapp/src/app/teacher/teacher-settings/teacher-settings.component.html
+++ b/ngapp/src/app/teacher/teacher-settings/teacher-settings.component.html
@@ -4,8 +4,7 @@
     <div class="classContainer">
       <!-- Nav bar -->
       <div class="classHeader">
-        <div class="backArrow" routerLink="/teacher/dashboard"><i class="fas fa-arrow-left"></i></div>
-        {{ts.l.classrooms}}
+        <div class="backArrow" routerLink="/teacher/dashboard"><i class="fas fa-arrow-left"></i>        {{ts.l.classrooms}}</div>
       </div>
       
       <!--Classroom title -->
