--- a/ngapp/src/app/teacher/student-list/student-list.component.scss
+++ b/ngapp/src/app/teacher/student-list/student-list.component.scss
@@ -14,6 +14,7 @@
 
 .storyEntry:hover {
     cursor: pointer;
+    background-color:rgba(0,0,0,.04);
 }
 
 .noStudentsMessage {
@@ -27,3 +28,15 @@
     font-weight: bolder;
     border-radius: 10px;
 }
+
+.expansionHeader {
+    padding-top:20px;
+    padding-bottom:20px;
+    text-decoration: underline;
+}
+
+.mat-expansion-panel-header[aria-disabled=true] {
+    color: black;
+    font-weight:bolder;
+}
+
