headers for lists

--- a/ngapp/src/app/teacher/student-list/student-list.component.html
+++ b/ngapp/src/app/teacher/student-list/student-list.component.html
@@ -1,16 +1,13 @@
 <mat-drawer-container class="studentListContainer" autosize>
-  <!-- list of students-->
-  <mat-accordion *ngIf="students.length > 0; else noStudentsMessage" [multi]="true">
-    <mat-expansion-panel disabled class="expansionHeader" style="cursor:pointer" >
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            Student
-          </mat-panel-title>
-          <mat-panel-description>
-           Num. of stories
-          </mat-panel-description>
-        </mat-expansion-panel-header>
-      </mat-expansion-panel>
+  <mat-accordion *ngIf="students.length > 0; else noStudentsMessage" [multi]="true" >
+    <!-- Student description header-->
+    <mat-expansion-panel disabled class="expansionHeader" style="cursor: pointer" >
+      <mat-expansion-panel-header>
+        <mat-panel-title> Student </mat-panel-title>
+        <mat-panel-description> Num. of stories </mat-panel-description>
+      </mat-expansion-panel-header>
+    </mat-expansion-panel>
+    <!-- List of students-->
     <mat-expansion-panel *ngFor="let student of students">
       <!-- panel header: username and num of stories-->
       <mat-expansion-panel-header (click)="resetFeedbackDrawer()">
@@ -18,20 +15,27 @@
           {{ student.username }}
         </mat-panel-title>
         <mat-panel-description *ngIf="studentStories[student.username]">
-          <!-- {{ studentStories[student.username].length }} -->
+          {{ studentStories[student.username].length }}
         </mat-panel-description>
       </mat-expansion-panel-header>
-      <div> Test </div>
+      <!-- Story description header -->
+      <div class="storyListHeader">
+        <div style="flex: 2">{{ ts.l.title }}</div>
+        <div style="flex: 2">{{ ts.l.last_updated }}</div>
+        <div style="flex: 1">Feedback given</div>
+      </div>
       <!-- panel opened body: list of stories-->
       <div *ngFor="let story of studentStories[student.username]">
         <mat-divider></mat-divider>
-        <div class="storyEntry" (click)="setStoryForFeedback(story); rightDrawer.open()" [attr.id]="story._id">
-          <div>{{ story.title }}</div>
-          <div>{{ story.lastUpdated | date : "d/M/yy" }}</div>
+        <div class="storyEntry" (click)="setStoryForFeedback(story); rightDrawer.open()" [attr.id]="story._id" >
+          <div style="flex: 2">{{ story.title }}</div>
+          <div style="flex: 2">{{ story.lastUpdated | date : "d/M/yy" }}</div>
+          <div style="flex: 1"> <i *ngIf="hasFeedback(story)" class="fas fa-check"></i> </div>
         </div>
       </div>
     </mat-expansion-panel>
   </mat-accordion>
+  <!-- No students message -->
   <ng-template #noStudentsMessage>
     <div class="noStudentsMessage">
       Click on the 'Share Code' button to get the classroom code. Your students
